Contents of composited overflow-scroll are missing when newly added https://bugs.webkit.org/show_bug.cgi?id=179556 rdar://problem/20368294

Reviewed by Tim Horton.

Source/WebCore:

When content is appended to an oveflow:scroll, we do a subtree layout. That triggered
a compositing code path that failed to call updateAfterDescendants() which is where
we compute whether we can be a simple composited layer without backing store. Fix to
call that after the updateGeometry() call, as we do elsewhere.

Test: compositing/backing/overflow-gains-content.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateAfterLayout):

LayoutTests:

* compositing/backing/overflow-gains-content-expected.html: Added.
* compositing/backing/overflow-gains-content.html: Added.

Canonical link: https://commits.webkit.org/195603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224715 268f45cc-cd09-0410-ab3c-d52691b4dbfc